# kisan-alert

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  seed.py
backend/app/routers/: advisory.py  alerts.py  fertilizer.py  forecast.py  health.py  plots.py  recommend.py  sensors.py  sms_sim.py  tts_router.py  twilio.py
backend/app/services/: alerts.py  fertilizer.py  gemini.py  grounding.py  ndvi_forecast.py  rag.py  recommend.py  sms.py  sms_router.py  tts.py  twilio_gw.py  weather.py
backend/tests/: conftest.py  test_engines.py  test_flows.py  test_ndvi_forecast.py  test_routes.py  test_sanity.py
data/: crop_requirements.csv  groundwater.csv  plots.geojson  regions.json
data/artifacts/: climate.json  satellite.json  soil.json
data/knowledge/: practices.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  i18n.ts  index.css  speech.ts
frontend/src/components/: AdvisoryChat.tsx  AlertsCard.tsx  Charts.tsx  FertilizerCard.tsx  HealthPanel.tsx  ModelCard.tsx  NdviForecastCard.tsx  PlotMap.tsx  PlotVerdict.tsx  RecommendPanel.tsx  RskView.tsx  SensorCard.tsx  Skeleton.tsx  SmsSimulator.tsx
pipeline/: common.py  fetch_climate.py  fetch_satellite.py  fetch_soil.py
