[project]
name = "kisan-alert"
version = "0.1.0"
description = "Satellite-grounded crop, water and advisory intelligence for small and marginal farmers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.4",
    "google-genai>=1.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0"]
pipeline = ["earthengine-api>=1.0"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app", "common"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
